update currency internals and tests

--- a/TODO
+++ b/TODO
@@ -8,3 +8,4 @@ Todo:
 Feature Enhancements:
   ☐ Add big number support for values greater than 10^12
   ✔ Add zero decimal optimization. Example: 1.0 becomes Decimal{units: 10, precision: 1}, but could be Decimal{units: 1, precision: 0} @started(24-06-21 06:19) @done(24-06-21 06:26) @lasted(7m36s)
+  ☐ Add realtime Currency Code validation (ISO 4217) lookup valid codes online perhaps.
